--- a/configs/default.yml
+++ b/configs/default.yml
@@ -5,7 +5,7 @@ DIR:
   IMAGERY_DIR:      "data/input/imagery/"
   TEST_IMAGERY_DIR: "data/input/imagery_8192/"
   GRAPH_DIR:        "data/input/graphs/"
-  IMG_COORD_PATH:   "data/input/regions/pytiles.json"
+  ALL_REGION_PATH:  "data/input/regions/all_regions.json"
   TEST_REGION_PATH: "data/input/regions/test_regions.txt"
   PRE_JUNC_NMS_DIR: "data/input/junction_nms/"
   CHECK_POINT_DIR: !!python/object/apply:os.path.join [*DATA_ROOT, *TASK, "ckpt"]
